@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/106
+  Raise RuntimeError, if you call tasklet.setup() on a tasklet, that is
+  already alive.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/105
   Fix an occasional NULL-pointer access during interpreter shutdown.
 
